--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -1,9 +1,14 @@
 <h1>Ganz Deutschland</h1>
 <CovidDetails @data={{@model}}>
   <tr>
+    <td>Bevoelkerung:</td>
+    <td>{{format-number @model.bevoelkerungTotal}}</td>
+    <td></td>
+  </tr>
+  <tr>
     <td>Infizierte:</td>
     <td>{{format-number @model.cases}}</td>
-    <td></td>
+    <td>{{calculate-percent @model.bevoelkerungTotal @model.cases}}%</td>
   </tr>
   <tr>
     <td>Aktuell Infiziert:</td>
@@ -13,7 +18,12 @@
   <tr>
     <td>Tote:</td>
     <td>{{format-number @model.deaths}}</td>
-    <td>{{calculate-percent @model.cases @model.deaths}}%</td>
+    <td>{{calculate-percent @model.cases @model.deaths}}% der Infizierten</td>
+  </tr>
+  <tr>
+    <td></td>
+    <td></td>
+    <td>{{calculate-percent @model.bevoelkerungTotal @model.deaths}}% der Bevoelkerung</td>
   </tr>
   <tr>
     <td>Genesen:</td>
