adds percent sign

--- a/app/templates/bundesland/details.hbs
+++ b/app/templates/bundesland/details.hbs
@@ -8,7 +8,7 @@
   <tr>
     <td>Infizierte:</td>
     <td>{{format-number @model.count}}</td>
-    <td>{{calculate-percent @model.bevoelkerungTotal @model.count}}</td>
+    <td>{{calculate-percent @model.bevoelkerungTotal @model.count}}%</td>
   </tr>
   <tr>
     <td>Tote:</td>
