--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -11,12 +11,12 @@
     <td>{{calculate-percent @model.cases @model.recovered}}%</td>
   </tr>
   <tr>
-    <td>Neu Infiziert:</td>
+    <td>Neu infiziert:</td>
     <td>{{format-number @model.difference.cases}}</td>
     <td></td>
   </tr>
   <tr>
-    <td>Neu Gestorben:</td>
+    <td>Neu gestorben:</td>
     <td>{{format-number @model.difference.deaths}}</td>
     <td></td>
   </tr>
